fixed overlapping background

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body{
+#main-page{
     height: 100vh;
 	background: linear-gradient(90deg, #66BA9C 50%,transparent 50%);
 }
